# MinecraftConsoles

./: .gitignore  CMakeLists.txt  COMPILE.md  README.md
Minecraft.Client/: AbstractContainerScreen.cpp  AbstractProjectileDispenseBehavior.cpp  AbstractProjectileDispenseBehavior.h  AbstractTexturePack.cpp  AchievementPopup.cpp  AchievementScreen.cpp  ArchiveFile.cpp  ArrowRenderer.cpp  BatModel.cpp  BatRenderer.cpp  BeaconRenderer.cpp  BlazeModel.cpp  BlazeRenderer.cpp  BoatRenderer.cpp  BookModel.cpp  BreakingItemParticle.cpp  BufferedImage.cpp  Camera.cpp  Camera.h  ChatScreen.cpp  ChestRenderer.cpp  ChickenModel.cpp  ChickenRenderer.cpp  Chunk.cpp  Chunk.h  ClientConnection.cpp  ClientConnection.h  ClockTexture.cpp  CompassTexture.cpp  ConfirmScreen.cpp  ConnectScreen.cpp  ContainerScreen.cpp  ControlsScreen.cpp  CraftingScreen.cpp  CreateWorldScreen.cpp  CreativeMode.cpp  CreeperModel.cpp  CreeperRenderer.cpp  CritParticle.cpp  CritParticle2.cpp  (+203 more)
Minecraft.Client/Common/: Consoles_App.cpp  Consoles_App.h
Minecraft.Client/Common/Audio/: SoundEngine.cpp  SoundEngine.h
Minecraft.Client/Common/Colours/: ColourTable.cpp
Minecraft.Client/Common/DLC/: DLCAudioFile.cpp  DLCColourTableFile.cpp  DLCGameRulesHeader.cpp  DLCManager.cpp  DLCPack.cpp  DLCSkinFile.cpp
Minecraft.Client/Common/GameRules/: AddEnchantmentRuleDefinition.cpp  AddItemRuleDefinition.cpp  ApplySchematicRuleDefinition.cpp  CollectItemRuleDefinition.cpp  CompleteAllRuleDefinition.cpp  CompoundGameRuleDefinition.cpp  ConsoleGenerateStructure.cpp  ConsoleGenerateStructure.h  ConsoleSchematicFile.cpp  GameRuleDefinition.cpp  GameRuleManager.cpp  LevelGenerationOptions.cpp  LevelGenerationOptions.h  LevelRuleset.cpp  StartFeature.cpp  UpdatePlayerRuleDefinition.cpp  XboxStructureActionPlaceContainer.cpp  XboxStructureActionPlaceSpawner.cpp
Minecraft.Client/Common/Leaderboards/: LeaderboardManager.cpp  SonyLeaderboardManager.cpp
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SessionInfo.h
Minecraft.Client/Common/Telemetry/: TelemetryManager.cpp
Minecraft.Client/Common/Tutorial/: ChangeStateConstraint.cpp  ChoiceTask.cpp  ControllerTask.cpp  CraftTask.cpp  DiggerItemHint.cpp  FullTutorial.cpp  InfoTask.cpp  RideEntityTask.cpp  Tutorial.cpp  TutorialHint.cpp  TutorialMode.cpp  XuiCraftingTask.cpp
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  IUIScene_AnvilMenu.cpp  IUIScene_BeaconMenu.cpp  IUIScene_CraftingMenu.cpp  IUIScene_CraftingMenu.h  IUIScene_CreativeMenu.cpp  IUIScene_CreativeMenu.h  IUIScene_EnchantingMenu.cpp  IUIScene_HUD.cpp  IUIScene_PauseMenu.cpp  IUIScene_TradingMenu.cpp  UIComponent_Chat.cpp  UIComponent_Panorama.cpp  UIComponent_TutorialPopup.cpp  UIControl.cpp  UIControl_Base.cpp  UIControl_EnchantmentBook.cpp  UIControl_EnchantmentButton.cpp  UIControl_MinecraftHorse.cpp  UIControl_MinecraftPlayer.cpp  UIControl_PlayerSkinPreview.cpp  UIController.cpp  UIScene.cpp  UIScene_AbstractContainerMenu.cpp  UIScene_AnvilMenu.cpp  UIScene_BeaconMenu.cpp  UIScene_BrewingStandMenu.cpp  UIScene_ConnectingProgress.cpp  UIScene_ContainerMenu.cpp  UIScene_ControlsMenu.cpp  UIScene_CraftingMenu.cpp  UIScene_CreateWorldMenu.cpp  UIScene_CreativeMenu.cpp  UIScene_Credits.cpp  UIScene_DLCMainMenu.cpp  UIScene_DLCOffersMenu.cpp  UIScene_DeathMenu.cpp  UIScene_DebugCreateSchematic.cpp  UIScene_DebugOverlay.cpp  UIScene_DebugSetCamera.cpp  (+34 more)
Minecraft.Client/Common/XUI/: XUI_ConnectingProgress.cpp  XUI_Ctrl_CraftIngredientSlot.cpp  XUI_Ctrl_EnchantButton.cpp  XUI_Ctrl_EnchantmentBook.cpp  XUI_Ctrl_EnchantmentButtonText.cpp  XUI_Ctrl_MinecraftPlayer.cpp  XUI_Ctrl_MinecraftSkinPreview.cpp  XUI_Ctrl_MinecraftSkinPreview.h  XUI_Ctrl_MinecraftSlot.cpp  XUI_Ctrl_SlotItemCtrlBase.cpp  XUI_Ctrl_SplashPulser.cpp  XUI_DLCOffers.cpp  XUI_Death.cpp  XUI_DebugItemEditor.cpp  XUI_DebugOverlay.cpp  XUI_DebugSetCamera.cpp  XUI_DebugTips.cpp  XUI_FullscreenProgress.cpp  XUI_HUD.cpp  XUI_HelpAndOptions.cpp  XUI_HelpControls.cpp  XUI_HelpHowToPlay.cpp  XUI_HowToPlayMenu.cpp  XUI_InGameInfo.cpp  XUI_InGamePlayerOptions.cpp  XUI_Intro.cpp  XUI_Leaderboards.cpp  XUI_LoadSettings.cpp  XUI_MainMenu.cpp  XUI_MultiGameCreate.cpp  XUI_MultiGameInfo.cpp  XUI_MultiGameJoinLoad.cpp  XUI_MultiGameLaunchMoreOptions.cpp  XUI_NewUpdateMessage.cpp  XUI_PauseMenu.cpp  XUI_Reinstall.cpp  XUI_Scene_AbstractContainer.cpp  XUI_Scene_Anvil.cpp  XUI_Scene_Base.cpp  XUI_Scene_BrewingStand.cpp  (+21 more)
Minecraft.Client/PSVita/: PSVita_App.cpp  PSVita_App.h  PSVita_Minecraft.cpp  PSVita_PlayerUID.cpp  PSVita_UIController.cpp
Minecraft.Client/PSVita/Leaderboards/: PSVitaLeaderboardManager.cpp
Minecraft.Client/PSVita/Network/: SQRNetworkManager_AdHoc_Vita.cpp  SQRNetworkManager_AdHoc_Vita.h  SQRNetworkManager_Vita.cpp  SQRNetworkManager_Vita.h  SonyCommerce_Vita.h
Minecraft.Client/PSVita/PSVitaExtras/: PSVitaStubs.h  ShutdownManager.cpp
Minecraft.Client/PSVita/WASM/: platform_wasm.cpp  shim_SceAudio.cpp  shim_SceAudio.h  shim_SceAudio.js  shim_SceCtrl.cpp  shim_SceCtrl.h  shim_SceCtrl.js  shim_SceDisplay.cpp  shim_SceDisplay.h  shim_SceDisplay.js  shim_SceGxm.cpp  shim_SceGxm.h  shim_SceGxm.js  (+10 more)
Minecraft.Client/Web/: WebAudio.cpp  WebAudio.h  WebGLRenderer.cpp  WebGLRenderer.h
Minecraft.World/: ArmorItem.cpp  Arrow.cpp  Biome.cpp  BiomeSource.cpp  Blaze.cpp  BucketItem.cpp  C4JThread.cpp  CauldronTile.cpp  Chicken.cpp  ClockItem.cpp  Command.cpp  CommandBlockEntity.cpp  CompassItem.cpp  CompressedTileStorage.cpp  Connection.cpp  ConsoleSaveFileOriginal.cpp  ContainerMenu.cpp  Cow.cpp  Creeper.cpp  Dimension.cpp  DurangoStats.cpp  EnchantItemCommand.cpp  EnderDragon.cpp  EnderMan.cpp  Entity.cpp  EntityHorse.cpp  FireTile.cpp  Ghast.cpp  GiveItemCommand.cpp  GrassTile.cpp  HellDimension.cpp  LavaSlime.cpp  Layer.cpp  LeafTile.cpp  Level.cpp  Level.h  LevelChunk.cpp  LightningBolt.cpp  LivingEntity.cpp  MapItemSavedData.cpp  (+39 more)
Minecraft.World/x64headers/: extraX64.h
cmake/: ClientSources.cmake  vita_wasm.cmake
(+48 files in other folders)
